--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -48,8 +48,16 @@
               <label for="mensaje">Mensaje</label>
               <textarea class="input-text"></textarea>
             </div>
-          </div>
 
+            <div class="campo">
+              <input type="checkbox" id="privacidad" required>
+              <label for="privacidad" class="checkbox-label">
+              Acepto la <a href="privacidad.html." target="_blank" rel="noopener noreferrer">Política de Privacidad</a>
+              </label>
+            </div>
+
+          </div>
+          
           <div class="alinear-derecha flex">
             <input class="boton" w-100 type="submit" value="Enviar">
           </div>
