nuevos cambios en el index

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -68,6 +68,11 @@
     </svg>
   </a>
 </section>
+<!-- Logo -->
+    <div class="logo-footer">
+      <img src="../images/logo.png" alt="Logo Digital Technology" />
+      </div>
+    </div>
     <p>&copy; 2025 Mi Sitio. <a href="./privacidad.html">Política de Privacidad</a>. ¡Gracias por visitar!</p>
   </footer>
 </body>
