--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,7 +108,7 @@ h1,h2,h3{
 }
 /* Hero*/
 .hero{
-    background-image: url(../images/hero.jpg);
+    background-image: url(../assets/images/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 650px;
@@ -238,14 +238,14 @@ h1,h2,h3{
 }
 /*Productos*/
 .image{
-    background-image: url(../images/servicios.jpg);
+    background-image: url(../assets/images/servicios.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 650px;
     position: relative;
     margin-bottom: 1rem;
 }
-.contenido-image{
+.contenido-image {
     position: absolute;
     background-color: rgba(0,0,0, .7);
     background-color: rgb(0 0 0 / 8%);
