--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Presupuesto para desarrollo web, diseño y e-commerce.">
   <title>Ubicación | Mi Sitio</title>
-  <link rel="stylesheet" href="../css/estilos.css" />
+  <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -27,19 +27,10 @@
     <p>Nos encontramos en Madrid, España.</p>
 
     <div id="map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194348.23369181997!2d-3.8443459223903176!3d40.437837282443894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1748900034478!5m2!1ses!2ses"
-        width="100%"
-        height="390"
-        style="border:0;"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        aria-label="Mapa de ubicación de Madrid"
-      ></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194348.23369181997!2d-3.8443459223903176!3d40.437837282443894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1748900034478!5m2!1ses!2ses" ></iframe>
     </div>
   </main>
-
+ 
   <footer class="footer">
     <section class="redes-sociales" aria-label="Redes sociales">
   <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
@@ -69,11 +60,10 @@
   </a>
 </section>
 <!-- Logo -->
-    <div class="logo-footer">
-      <img src="../images/logo.png" alt="Logo Digital Technology" />
-      </div>
-    </div>
+    
+    <div class="logo-footer"><img src="../assets/images/logo.png" alt="Logo Digital Technology"></div>
     <p>&copy; 2025 Mi Sitio. <a href="./privacidad.html">Política de Privacidad</a>. ¡Gracias por visitar!</p>
+    
   </footer>
 </body>
 </html>
