--- a/views/productos.html
+++ b/views/productos.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Presupuesto para desarrollo web, diseño y e-commerce.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos | Mi Sitio</title>
-  <link rel="stylesheet" href="../css/estilos.css" />
+  <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -21,11 +20,11 @@
     </div>
   </header>
 
-  <section class="image">
+  <div class="image" >
     <div class="contenido-image">
       <!-- Puedes añadir aquí una imagen, texto o un botón -->
     </div>
-  </section>
+  </div>
 
   <main class="contenedor sombra">
     <h2>Mis Servicios</h2>
@@ -101,11 +100,10 @@
   </a>
 </section>
   <!-- Logo -->
-    <div class="logo-footer">
-      <img src="../images/logo.png" alt="Logo Digital Technology" />
-      </div>
-    </div>
+    <div class="logo-footer"><img src="../assets/images/logo.png" alt="Logo Digital Technology"></div>
     <p>&copy; 2025 Mi Sitio. <a href="./privacidad.html">Política de Privacidad</a>. ¡Gracias por visitar!</p>
   </footer>
+  
 </body>
+
 </html>
