--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,16 +95,18 @@ h1,h2,h3{
     flex-direction: row;
     justify-content: space-between;
 }
-.navegacion-principal a {
+.navegacion-principal a{
     color:var(--blanco);
     text-decoration: none;
     font-size: 1.3rem;
     font-weight: 700;
     padding: 1rem;
 }
-.navegacion-principal a:hover{
+.navegacion-principal a:hover,
+a.activo{
     background-color: var(--primario);
     color: var(--oscuro);
+    border-radius: 5px;
 }
 /* Hero*/
 .hero{
