--- a/views/contacto.html
+++ b/views/contacto.html
@@ -17,7 +17,7 @@
         <a href="../index.html">Inicio</a>
         <a href="../views/productos.html">Productos</a>
         <a href="../views/presupuesto.html">Presupuesto</a>
-        <a href="../views/contacto.html">Contacto</a>
+        <a href="../views/contacto.html" class="activo">Contacto</a>
       </nav>
     </div>
   </header>
