--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -15,7 +15,7 @@
       <nav class="navegacion-principal contenedor" aria-label="Navegación principal">
         <a href="../index.html">Inicio</a>
         <a href="../views/productos.html">Productos</a>
-        <a href="../views/presupuesto.html">Presupuesto</a>
+        <a href="../views/presupuesto.html" class="activo">Presupuesto</a>
         <a href="../views/contacto.html">Contacto</a>
       </nav>
     </div>
