--- a/views/productos.html
+++ b/views/productos.html
@@ -13,7 +13,7 @@
     <div class="nav-bg">
       <nav class="navegacion-principal contenedor" aria-label="Navegación principal">
         <a href="../index.html">Inicio</a>
-        <a href="../views/productos.html">Productos</a>
+        <a href="../views/productos.html" class="activo">Productos</a>
         <a href="../views/presupuesto.html">Presupuesto</a>
         <a href="../views/contacto.html">Contacto</a>
       </nav>
